--- a/parts/0_intro.tex
+++ b/parts/0_intro.tex
@@ -2,6 +2,22 @@
 
 %\section { Введение.}
 
+JavaScript сегодня является самым популярным языком программирования, используемым для разработки веб-приложений на стороне клиента\cite{JsUsage, LangUsage}. В статье «Самый неправильно понятый язык программирования в мире стал самым популярным в мире языком программирования»\cite{MostPopLang} Дуглас Крокфорд утверждает, что лидирующую позицию JavaScript занял в связи с развитием AJAX, поскольку браузер стал превалирующей системой доставки приложений. Он также констатирует растущую популярность JavaScript, то, что этот язык встраивается в приложения, отмечает значимость языка.
+
+Так же широкому распросторанение способствовал тот факт, что JavaScript является единственным языком программирования, который поддерживается всеми современными браузерами. Таким образом, чтобы разрабатывать код для клиентской части программы на другом языке, отличном от JavaScript необходимо уметь компилировать код на данном языке  в JavaScript. Такая задача часто возникает из-за ряда недостатков языка JavaScript, затрудняющих разработку больших приложений. К примеру, Дуглас Крокфорд в своей книге <<JavaScript: The Good Parts>>\cite{GoodParts} указывает более 20 неудачных решений, сделанных при проектировании языка. Среди~которых:
+\begin{itemize}
+\item Использование глобальных переменных в стандартных API.
+\item Привязка областей видимости переменных к функциям\\* (а не блокам).
+\item Запутанная семантика операторов сложения и сравнения.
+\item Наличие неиспользуемых ключевых слов.
+\end{itemize} 
+
+Кроме того, динамическая типизация языка затрудняет разработку инструментов для JavaScript таких, как интегрированные среды разработки (IDE) и статические анализаторы кода. Все эти обстоятельства, а также растущая сложность клиентских приложений, которые приходится реализовывать разработчикам, подталкивают программистов к поиску замены для JavaScript. Благодаря этому возникло множество программных продуктов, осуществляющих трансляцию в JavaScript многих современных языков программирования.\cite{AltJS}
+
+С 2010 года в комапинии JetBrains разрабатывается язык программирования Kotlin. А в 2012 году данный язык обзавелся компилятором в JavaScript. Компилятор выдавал код удовлетворительного качества, но первичный анализ показал, что этот код далек от совершенства и хотелось бы это исправить. Тем более, аналоги, по состоянию на начало 2013 года, ушили далеко вперед.
+
+В данной работе проведится анализ качества кода, генерируемого компилятором Kotlin в JavaScript, с целью выявить и устранить в нем <<узкие>> места. Целью работы является улучшить компилятор Kotlin в JavaScript так, чтобы он генерировал более эффективный в плане производительности код.
+
 % Здесь обычно обосновываются актуальность выбранной темы, цель и содержание поставленных задач, формулируются объект и предмет исследования, указывается избранный метод (или методы) исследования, сообщается, в чем заключается теоретическая значимость и прикладная ценность ожидаемых результатов.
 
 % Актуальность – обязательное требование к любой работе. В применении к квалификационной работе важно, как ее автор умеет выбрать тему и насколько правильно он эту тему понимает и оценивает с точки зрения научной и социальной значимости, т. к. это характеризует его профессиональную подготовленность. 
@@ -11,226 +27,4 @@
 % Обязательным элементом введения является также указание на методы исследования, которые служат инструментом в добывании фактического материала, являясь необходимым условием достижения поставленной в работе цели. 
 % В конце вводной части желательно раскрыть структуру работы, то есть дать перечень ее структурных элементов и обосновать последовательность их расположения.
 
-
 % (изучить., описать., установить., выявить., вывести формулу… и т.п.)
-
-Последние 5-10 лет на фоне бурного развития интернета JavaScript получила широкое распросторонение. Но по ряду причин JavaScript не устраивает разработчиков и начали появляться трансляторы в JavaScript из других языков, кроме того это дает возможность разработчикам писть и серверный, и клиентсыки код на одном языке.
-
-С 2010 года в комапинии JetBrains разрабатывается язык программирования Kotlin. В 2012 году появилась возможность компилировать код на Kotlin в JavaScript. Компилятор выдавал код удовлетворительного качества, но хотелсь большего. Тем более, конкуренты/аналоги, по состоянию на начало 2013 года ушили далеко вперед.
-
-Таким образом в рамках данной работы хочется улучшить качество генерируемого компилятором Kotlin в JavaScript. В первую очередь, хочется улучшить производительность получаемого JavaScript-кода.
-
-Выявить узкие <<места>> и предложить способы их устранения.
-
-
-
-JavaScript -- это язык програмимрования для Веб. Подовляющее большинство веб-сайтов используют JavaScript, и все современные веб-браузеры -- для настольных компьютеров, игровые приствок, эклектронных планшетов и смартфонов включают интерпритатор JavaScript, что делает JavaScript самым широкоприменимым языком программирования из когда либо существовавших в истории. JavaScript входит в тройку техналогий, которые должны знать  любой веб-разработчик: язык разметки HTML, позволяющий определить содержимов веб-страниц, язык стилей CSS, позволяющий определить внешний вид веб-страниц, и язык программирования JavaScript, позволяющий определять поведение веб-страниц.
-
-JavaScript является высокоуровневым, динамическим, нетипизрованым и интрепретируемым языком программирования, который хорошо подходит для программирования в объектно-ориентированном и функциональном стилях. Свой синтаксис JavaScript унаследовал из языка Java, свои первоклассные функции – из языка Scheme, а механизм наследования на основе прототипов – из языка Self. 
-
-Название языка «JavaScript» может вводить в заблуждение. За иснлюкечинем поверхностной синтаксической схожести, JavaScript полностью отличается от языка программирования Java. JavaScript давно перерос рамки языка сценариев, превратившись в надежный и эффективный универсальный язык программирования. Последняя версия языка (смотрите врезку) определяет множество новых особенностей, позволяющих использовать его для разработки крупномасштабного программного обеспечения.
-
-
-Чтобы представлять хоть какой-то интерес, каждый язык программирования должен иметь свою платформу, или стандартную библиотеку или API функций для выполнения таких базовых операций, как ввод и  вывод. Ядро языка JavaScript определяет минимальный прикладной интерфейс для работы с текстом, массивами, датами и регулярными выражениями, но в нем отсутствуют операции ввода-вывода. Ввод и вывод (а также более сложные возможности, такие как сетевые взаимодействия, сохранение данных и работа с графикой) перекладываются на «окружающую среду», куда встраивается JavaScript. Обычно роль окружающей среды играет веб-броузер (однако в главе 12 мы увидим два примера использования JavaScript без привлечения веб-броузера).
-
-JavaScript – объектно-ориентированный язык, но используемая в нем объектная модель в корне отличается от модели, используемой в большинстве других языков. 
-
-
----
-
-JavaScript: названия и версии
-JavaScript был создан в компании Netscape на заре зарождения Веб. Название «JavaScript» является торговой маркой, зарегистрированной компанией Sun Microsystems (ныне Oracle), и  используется для обозначения реализации языка, созданной компанией Netscape (ныне Mozilla). Компания Netscape представила язык для стандартизации европейской ассоциации производителей компьютеров ECMA (European Computer Manufacturer’s Association), но из-за юридических проблем с торговыми марками стандартизованная версия языка получила несколько неуклюжее название «ECMAScript». Из-за тех же юридических проблем версия языка от компании Microsoft получила официальное название «JScript». Однако на практике все эти реализации обычно называют JavaScript. В течение прошлого десятилетия все веб-броузеры предоставляли реализацию версии 3 стандарта ECMAScript, и в действительности разработчикам не было необходимости задумываться о номерах версий: стандарт языка был стабилен, а его реализации в веб-броузерах в значительной мере были совместимыми. Недавно(???) вышла новая важная версия стандарта языка под названием ECMAScript 5, и к моменту написания этих строк производители броузеров приступили к созданию его реализации. Эта книга охватывает все нововведения, появившиеся в ECMAScript 5, а также все особенно
-сти, предусмотренные стандартом ECMAScript 3. (Четвертая версия стандарта ECMAScript разрабатывалась много лет, но из-за слишком амбициозных целей так и не была выпущена.) Однако иногда можно встретить упоминание о версии JavaScript, например: JavaScript 1.5 или JavaScript 1.8. Эти номера версий присваивались реализациям JavaScript, выпускаемым компанией Mozilla, причем версия 1.5 соответствует базовому стандарту ECMAScript 3, а более высокие версии включают нестандартные расшире
-ния. Наконец, номера версий также присваиваются отдельным интерпретаторам, или «механизмам» JavaScript. Например, компания Google разрабатывает свой интерпретатор JavaScript под названием V8, и к моменту написания этих строк текущей версией механизма V8 была версия 3.0.\cite{JsDef6}
-
-
----
-Небольшое введение:
-JavaScript — прототипно-ориентированный скриптовый язык программирования с динамической типизацией. Является диалектом языка ECMAScript.
-Kotlin — статически типизированный объектно-ориентированный язык, разрабатываемый в компании JetBrains. Компилируется в Java байт-код и в JavaScript.
-
----
-
-JavaScript is the x86 of the web
-Brendan Eich (создатель JavaScript)
-
-...JavaScript is the VM of the web. ....
-Douglas Crockford (известный JS-разработчик, создатель JSON)
-
-JavaScript is an assembly language for the Web. ...
-Erik Meijer (language designer из Microsoft,
-<<отец>> LINQ )
-
-Почему JS? JS за последнее время стал очень популярен и его часто называют ассемблером для веба. Сейчас наверно почти для любого языка есть какой нибудь транслятор/компилятор в JS. 
-
----
-Почему JavaScript?
-
-Интерпретатор JS есть почти везде
-JS не очень удобен для разработки больших проектов
-Удобно писать все части системы на одном языке
-
-
-
-Почему так происходит и почему команде котолина нужно изобретать свой ввелосипед? Я вижу несколько основных причин, думаю, общих для всех подобных проектов:
-1. JS есть почти везде (потому что там есть браузер)
-2. Но JS не очень удобен для разработки больших и сложных проектов (да и вообще для разработки)
-3. Удобно писать и серверную и клиентскую часть(если такие есть) на одном языке. Да можно писать серверную часть на JS, но смотри 2
-Дальше мнения могут расходится, например кому то нравится статическая типизация, кому то динамическая у каждого подхода есть свои минусы и плюсы...
-или кому то нравятся много скобочек
-Kotlin новый языка который тоже нуждается в таком трансляторе.
-Ввиду специфики языка не так просто взять и переиспользовать готовые решения. Готовые решения обычно заточены под свой конкретный язык
-Сейчас уже есть какая то реализация данного транслятора, но он еще достаточно далек от того что хотелось бы иметь.
-
----
-Цель
-Улучшить компилятор Kotlin в JavaScript так, чтобы он генерировал более эффективный в плане производительности код.
-
----
-Задачи
-Изучить аналоги
-Изучить существующие JS виртуальные машины
-Выбрать и реализовать тесты производительности для сравнения (бенчмарки)
-Проанализировать результаты тестов и выделить <<узкие места>>
-Предложить способы их оптимизации
-Реализовать предложенные решения
-
-Для достижения данной цели были поставлены следующие задачи
-Изучить аналоги
-Изучить существующие JS виртуальные машины (они давно перестали быть интерпритаторами)
-Выбрать и реализовать тесты производительности для сравнения (бенчмарки)
-Проанализировать результаты тестов и выделить <<узкие места>>
-Предложить способы их оптимизации
-Реализовать предложенные решения
-
-
-Аналоги (1/2)
-Dart — язык программирования, созданный Google, позиционируется в качестве замены JavaScript
-Dart2js — компилятор Dart в JavaScript. Разрабатывается той же командой что и Dart
-CoffeeScript — иной взгляд на JavaScript. Многое взято из Ruby, Python, Haskell и Erlang
-TypeScript — язык от Microsoft, позиционируемый как средство разработки веб-приложений
-
-Ceylon — язык, разрабатываемый в RedHat. Компилируется в Java байт-код и JavaScript
-Google Web Toolkit — Java-фреймворк для создания веб-приложений. Включает в себя компилятор из Java в JavaScript
-Closure-Compiler — оптимизатор JavaScript - кода
-Pyjs, qb.js, ghcjs, ClojureScript, ...
-
-
-Большой обзор на altJs.org
-
-Ceylon во многом похожий на Котлин проект, но с ними не интересно сравниваться, потому что они не сильно заморачиваются на оптимальности генерируемого JS кода
-
-GWT
-Closure-Compiler
-
-Отдельно хочется отметить GWT и CC 
-
-Все это проекты я изучил и перенял опыт.
-
----
-JS виртуальные машины
-
- 
-Разработчик
-Где используется?
-v8
-Google
-Chrome, Node.js,
-Android, ...
-
-SpiderMonkey
-Mozilla 
-Firefox,
-Thunderbird, ...
-
-Chakra
-Microsoft
-IE ver. $\geq$ 9
-
-Rhino
-Mozilla
- 
-JavaScriptCore
-WebKit
-Safari, iOS ...
-
----
-С кем сравниваемся?
-
-JavaScript (бенчмарки от разработчиков v8)
-Dart (бенчмарки от разработчиков)
-Dart2js
-
-
-Есть набор тестов которые используются практически всеми разработчиками JS движков. И было бы логично взять эти тесты и для моей работы, потому что можно взять использовать уже готовые, написанные специалистами тесты, тем самым исключив предвзятость с моей стороны. И конечно же я тоже опубликую свои тесты и каждый сможет сам провести такие же эксперименты как и я.
-
-Отдельно хочется отметить последний тест -- этот бенчмарк пока еще не является общепринятым, но все же имеется реализация для многих языков. Данный дест был разработан разработчиками их гугла в 2011 с целью сравнения C++, Java, Scala, Go по таким критериями как производительность, объем кода, обхем бинарника, объем используемой памяти. 
-Данный бенчмарк я также переписал на котлин, но пока не исследовал.
-
-Тесты отмеченные одной звездочкой не реализованы.
-
-Richards
-OS kernel simulation benchmark, originally written in BCPL by Martin Richards (539 lines).
-Main focus: property load/store, function/method calls
-Secondary focus: code optimization, elimination of redundant code
-
-Deltablue
-One-way constraint solver, originally written in Smalltalk by John Maloney and Mario Wolczko (880 lines).
-Main focus: polymorphism
-Secondary focus: OO-style programming
----
-Сравниваться со всем кончено получилось бы и пришлось выбрать нескольких.
-Почему именно эти аналоги?
-Ну во первых это реализация на чистом JS, были взяты тесты от разработчиков v8. Я считаю это обязательным пунктом, чтобы показать, понять на сколько мы хуже чем код написанный вручную на целевом языке.(тем более экспертами) И сделать выводы в чем мы хуже и почему, что можно улучшить. А в итого показать на сколько мы хуже или лучше чем такой код.
-
-Казалось бы что может быть лучше вручную написанного JS кода? Я решил немного повысить планку и взять Dart, особенность в том, что дарт спроектирован с учетом некоторых недостатков JS, язык разрабоатывается практически той же коммандой которая разрабатывает v8, нативная реализация дарта выполняется в своей виртуальной машине которая знает о коде чуть больше и очень активно пользуется этим, за счет чего на многих тестах уже сейчас показывает лучшие результаты чем вручную написанный JS
-
-Ну и планачка чуть по ниже это js полученный путем трансляции дарт в js
-
-ТО план минимум работать так же хорошо как dart2js, план максимум работать так же хорошо как dart(видимо не всегда достижимый)
----
-Richards
-Данный бенчмар симулирует работу ядра ОС, написан в конце 90х Мартином Ричардсом.
-Основной фокс теста -- это чтение и запись данных и вызов функций- методов
-
-OS kernel simulation benchmark, originally written in BCPL by Martin Richards (539 lines).
-Main focus: property load/store, function/method calls
-Secondary focus: code optimization, elimination of redundant code
-
----
-Richards: Выводы
-
-Оптимизировать доступ к полям/свойствам, по возможности, сохранив бинарную совместимость
-Сделать аналог импорта, предоставив тем самым возможность кратко обращаться к объектам и их полям
-Необходимо упростить структуру генерируемого кода
-
----
-Deltablue
-constraint solver написанный John Maloney and Mario Wolczko в конце 80х, начале 90х (?)
-Основной фокус данного теста -- полиморфизм, ООП стиль программирования. В тесте очень часто и в большем количестве создаются объекты. Эти объекты живут не очень долго и видимо этот тест так же подходит для тестирования GC, но это нас не сильно интересует
-
-One-way constraint solver, originally written in Smalltalk by John Maloney and Mario Wolczko (880 lines).
-Main focus: polymorphism
-Secondary focus: OO-style programming
-
----
-<<Прямой>> вызов конструкторов
----
-DeltaBlue: Выводы
-
-Заменить все контейнеры на родные для JS аналоги
-Генерировать чистое прототипное наследование без оберток
-Инициализировать все поля класса в конструкторе
-Инициализировать все поля класса в одном порядке
-Заменить или оптимизировать Kotllin.equals
-
----
-Что дальше?
-
-Реализовать предложенные оптимизации
-Написать новые бенчмарки
-
-Если новые бенчмарки не дадут результатов: (или если будет время)
-Inlining функций и функциональных литералов
-Оптимизации на основе  Continuation-passing style и 
-Static single assignment
