add new items for `intro`

--- a/bib.bib
+++ b/bib.bib
@@ -1,10 +1,49 @@
-@book{JsDef6,
- author = {Дэвид Флэнган},
- title = {JavaScript. Подробное ркуоводство. Шестое издание},
- year = {2012},
- isbn = {978-593286-215-5},
- publisher = {Издательство Символ-Плюс},
- address = {Санкт-Петербург, Россия},
+@BOOK{JsDef6,
+	author = {Дэвид Флэнган},
+	title = {JavaScript. Подробное ркуоводство. Шестое издание},
+	year = {2012},
+	isbn = {978-593286-215-5},
+	publisher = {Издательство Символ-Плюс},
+	address = {Санкт-Петербург, Россия},
 }
 
+@BOOK{GoodParts,
+	author = {Douglas Crockford},
+	title = {JavaScript: The Good Parts},
+	year = {2008},
+	isbn = {978-0-596-51774-8},
+	publisher = {O'Reilly Media/Yahoo Press}
+}
 
+@ONLINE{JsUsage,
+	author = {builtwith.com},
+	title = {Javascript Usage Statistics},
+	howpublished = {\url{http://trends.builtwith.com/docinfo/Javascript}},
+	urldate = {2010-07-29}
+}
+
+@ONLINE{LangUsage,
+	author = {W$^3$Techs},
+	title = {Usage of client-side programming languages for websites},
+	howpublished = {\url{http://w3techs.com/technologies/overview/client_side_language/all}},
+	urldate = {2010-07-29}
+}
+
+@ONLINE{AltJS,
+	author = {W$^3$Techs},
+	title = {altJS -- Web coding without JavaScript.},
+	howpublished = {\url{http://altjs.org}},
+}
+
+@ONLINE{MostPopLang,
+	author = {Douglas Crockford},
+	title = {The World’s Most Misunderstood Programming Language Has Become the World’s Most Popular Programming Language},
+	title_ru = {Самый неправильно понятый язык программирования в мире стал самым популярным в мире языком программирования},
+	howpublished = {\url{http://javascript.crockford.com/popular.html}},
+	urldate = {2008-03-03}
+}
+
+@ONLINE{wiki:ru:JS,
+	title = {JavaScript},
+	howpublished = {\url{http://ru.wikipedia.org/wiki/JavaScript}},
+}
