Document's structure has changed

--- a/main.tex
+++ b/main.tex
@@ -22,8 +22,8 @@
 \input{parts/0_intro.tex}
 
 \startthechapters
-\input{parts/1_overview.tex}
-\input{parts/2_prelim.tex}
+\input{parts/1_problem.tex}
+\input{parts/2_overview.tex}
 \input{parts/3_impl.tex}
 \input{parts/4_results.tex}
 \input{parts/__conclusion.tex}
