--- a/parts/2_overview.tex
+++ b/parts/2_overview.tex
@@ -4,6 +4,69 @@
 % В выпускной работе автор должен подвести итоги проведенным на сегодняшний день исследованиям (своим и/или чужим), а также обосновать план проведения дальнейших работ.
 % Выпускная работа может составлять начальную ступень большого исследования, которое должно вылиться в кандидатскую диссертацию, но представляет собой законченную разработку. Выполненная таким образом выпускная работа позволит проконтролировать творческие способности, степень понимания современных научно-технических проблем; умение использовать методы научного исследования, уровень владения математическим моделированием физических процессов, знания и умения в области физики, математики, информатики, и пр.
 
+---
+
+Аналоги (1/2)
+Dart — язык программирования, созданный Google, позиционируется в качестве замены JavaScript
+Dart2js — компилятор Dart в JavaScript. Разрабатывается той же командой что и Dart
+CoffeeScript — иной взгляд на JavaScript. Многое взято из Ruby, Python, Haskell и Erlang
+TypeScript — язык от Microsoft, позиционируемый как средство разработки веб-приложений
+
+Ceylon — язык, разрабатываемый в RedHat. Компилируется в Java байт-код и JavaScript
+Google Web Toolkit — Java-фреймворк для создания веб-приложений. Включает в себя компилятор из Java в JavaScript
+Closure-Compiler — оптимизатор JavaScript - кода
+Pyjs, qb.js, ghcjs, ClojureScript, ...
+
+
+Большой обзор на altJs.org
+
+Ceylon во многом похожий на Котлин проект, но с ними не интересно сравниваться, потому что они не сильно заморачиваются на оптимальности генерируемого JS кода
+
+GWT
+Closure-Compiler
+
+Отдельно хочется отметить GWT и CC 
+
+Все это проекты я изучил и перенял опыт.
+
+
+
+
+-------
+Также в последнее время JavaScript набирает популярность в качестве языка для разработки серверной части приложений.
+
+***
+
+
+---
+JS виртуальные машины
+
+ 
+Разработчик
+Где используется?
+v8
+Google
+Chrome, Node.js,
+Android, ...
+
+SpiderMonkey
+Mozilla 
+Firefox,
+Thunderbird, ...
+
+Chakra
+Microsoft
+IE ver. $\geq$ 9
+
+Rhino
+Mozilla
+ 
+JavaScriptCore
+WebKit
+Safari, iOS ...
+
+
+
 
 В данном разделе приводятся результаты анализа существующих решений смежных
 задач, а также дается обоснование актуальности поставленной задачи.
@@ -31,7 +94,7 @@ JavaScript таких, как интегрированные среды разр
 которые приходится реализовывать разработчикам, подталкивают программистов к поиску
 замены для JavaScript. Благодаря этому возникло множество[8] программных продуктов,
 осуществляющих трансляцию в JavaScript многих современных языков программирования.
-6
+
 
 \section{Существующие трансляторы в JavaScript}
 
@@ -159,7 +222,7 @@ JetBrains в июле 2011года, а в июне 2012 года была вып
 соответственно каркасом GWT можно отнести:
 -
 Более лаконичный и выразительный синтаксис.
-9
+
 -
 Возможность обнаружить большее количество проблем на стадии компиляции
 (более безопасная система типов).
