--- a/parts/3_impl.tex
+++ b/parts/3_impl.tex
@@ -1,2 +1,81 @@
 \chapter{Реализация}
 
+С кем сравниваемся?
+
+JavaScript (бенчмарки от разработчиков v8)
+Dart (бенчмарки от разработчиков)
+Dart2js
+
+
+Есть набор тестов которые используются практически всеми разработчиками JS движков. И было бы логично взять эти тесты и для моей работы, потому что можно взять использовать уже готовые, написанные специалистами тесты, тем самым исключив предвзятость с моей стороны. И конечно же я тоже опубликую свои тесты и каждый сможет сам провести такие же эксперименты как и я.
+
+Отдельно хочется отметить последний тест -- этот бенчмарк пока еще не является общепринятым, но все же имеется реализация для многих языков. Данный дест был разработан разработчиками их гугла в 2011 с целью сравнения C++, Java, Scala, Go по таким критериями как производительность, объем кода, обхем бинарника, объем используемой памяти. 
+Данный бенчмарк я также переписал на котлин, но пока не исследовал.
+
+Тесты отмеченные одной звездочкой не реализованы.
+
+Richards
+OS kernel simulation benchmark, originally written in BCPL by Martin Richards (539 lines).
+Main focus: property load/store, function/method calls
+Secondary focus: code optimization, elimination of redundant code
+
+Deltablue
+One-way constraint solver, originally written in Smalltalk by John Maloney and Mario Wolczko (880 lines).
+Main focus: polymorphism
+Secondary focus: OO-style programming
+---
+Сравниваться со всем кончено получилось бы и пришлось выбрать нескольких.
+Почему именно эти аналоги?
+Ну во первых это реализация на чистом JS, были взяты тесты от разработчиков v8. Я считаю это обязательным пунктом, чтобы показать, понять на сколько мы хуже чем код написанный вручную на целевом языке.(тем более экспертами) И сделать выводы в чем мы хуже и почему, что можно улучшить. А в итого показать на сколько мы хуже или лучше чем такой код.
+
+Казалось бы что может быть лучше вручную написанного JS кода? Я решил немного повысить планку и взять Dart, особенность в том, что дарт спроектирован с учетом некоторых недостатков JS, язык разрабоатывается практически той же коммандой которая разрабатывает v8, нативная реализация дарта выполняется в своей виртуальной машине которая знает о коде чуть больше и очень активно пользуется этим, за счет чего на многих тестах уже сейчас показывает лучшие результаты чем вручную написанный JS
+
+Ну и планачка чуть по ниже это js полученный путем трансляции дарт в js
+
+ТО план минимум работать так же хорошо как dart2js, план максимум работать так же хорошо как dart(видимо не всегда достижимый)
+---
+Richards
+Данный бенчмар симулирует работу ядра ОС, написан в конце 90х Мартином Ричардсом.
+Основной фокс теста -- это чтение и запись данных и вызов функций- методов
+
+OS kernel simulation benchmark, originally written in BCPL by Martin Richards (539 lines).
+Main focus: property load/store, function/method calls
+Secondary focus: code optimization, elimination of redundant code
+
+---
+Richards: Выводы
+
+Оптимизировать доступ к полям/свойствам, по возможности, сохранив бинарную совместимость
+Сделать аналог импорта, предоставив тем самым возможность кратко обращаться к объектам и их полям
+Необходимо упростить структуру генерируемого кода
+
+---
+Deltablue
+constraint solver написанный John Maloney and Mario Wolczko в конце 80х, начале 90х (?)
+Основной фокус данного теста -- полиморфизм, ООП стиль программирования. В тесте очень часто и в большем количестве создаются объекты. Эти объекты живут не очень долго и видимо этот тест так же подходит для тестирования GC, но это нас не сильно интересует
+
+One-way constraint solver, originally written in Smalltalk by John Maloney and Mario Wolczko (880 lines).
+Main focus: polymorphism
+Secondary focus: OO-style programming
+
+---
+<<Прямой>> вызов конструкторов
+---
+DeltaBlue: Выводы
+
+Заменить все контейнеры на родные для JS аналоги
+Генерировать чистое прототипное наследование без оберток
+Инициализировать все поля класса в конструкторе
+Инициализировать все поля класса в одном порядке
+Заменить или оптимизировать Kotllin.equals
+
+---
+Что дальше?
+
+Реализовать предложенные оптимизации
+Написать новые бенчмарки
+
+Если новые бенчмарки не дадут результатов: (или если будет время)
+Inlining функций и функциональных литералов
+Оптимизации на основе  Continuation-passing style и 
+Static single assignment
