--- a/parts/__conclusion.tex
+++ b/parts/__conclusion.tex
@@ -4,3 +4,5 @@
 % Квалификационной работа завершается заключительной частью, которая так и называется «заключение». В заключении должно быть дано последовательное, логически стройное изложение полученных результатов и указано их соотношение с общей целью и конкретными задачами, сформулированными во введении. Именно здесь содержится, так называемое, «выводное» знание, которое является новым по отношению к исходному знанию и выносится на обсуждение и оценку в процессе защиты работы.
 % Заключительная часть предполагает также наличие обобщенной итоговой оценки проделанной работы с точки зрения ее новизны, теоретической и практической значимости. При этом важно указать, в чем заключается главный смысл работы, какие важные побочные результаты получены, какие встают новые задачи в связи с проведением исследования. 
 % Заключительная часть, составленная по такому плану, дополняет характеристику уровня профессиональной зрелости и квалификации автора работы.
+
+В рамках данной работы был проведен анализ качества кода, генерируемого компилятором Kotlin в JavaScript, с целью улучшения его производительности. Были выявлены узкие <<места>> генерируемого кода и предложены способы их устранения. Кроме того были реализованы некоторые из предложенных оптимизаций.
