add conclusion draft

--- a/parts/__conclusion.tex
+++ b/parts/__conclusion.tex
@@ -6,3 +6,15 @@
 % Заключительная часть, составленная по такому плану, дополняет характеристику уровня профессиональной зрелости и квалификации автора работы.
 
 В рамках данной работы был проведен анализ качества кода, генерируемого компилятором Kotlin в JavaScript, с целью улучшения его производительности. Были выявлены узкие <<места>> генерируемого кода и предложены способы их устранения. Кроме того были реализованы некоторые из предложенных оптимизаций.
+
+
+Автор планирует и дальше работать над этой задачей. В планах на будущее:
+\begin{itemize}
+\item Продолжить оптимизацию генерируемого кода.
+\item Написать новые бенчмарки. 
+\item Сделать чтобы генеририруемый код был более идеомотичным для JavaScript.
+\item Добавить поддержку технологии source-map для удобной отладки сгенерированного кода.
+\item Реализовать отсутствующие JavaScript компиляторе языковые фичи.
+\item Оптимизации на основе Continuation-passing style и 
+Static single assignment
+\end{itemize}
