--- a/parts/2_overview.tex
+++ b/parts/2_overview.tex
@@ -1,241 +1,131 @@
 \chapter{Обзор}
 
-% Выпускная работа может и должна эффективно контролировать не только практические, расчетные навыки, но и общий уровень фундаментальной образованности выпускника. Самостоятельное выполнение и защита выпускной работы позволяет выявить творческие способности, инициативность, научную самостоятельность студента и дать лучшим выпускникам обоснованную рекомендацию на продолжение образования в аспирантуре.
-% В выпускной работе автор должен подвести итоги проведенным на сегодняшний день исследованиям (своим и/или чужим), а также обосновать план проведения дальнейших работ.
-% Выпускная работа может составлять начальную ступень большого исследования, которое должно вылиться в кандидатскую диссертацию, но представляет собой законченную разработку. Выполненная таким образом выпускная работа позволит проконтролировать творческие способности, степень понимания современных научно-технических проблем; умение использовать методы научного исследования, уровень владения математическим моделированием физических процессов, знания и умения в области физики, математики, информатики, и пр.
-
----
-
-Аналоги (1/2)
-Dart — язык программирования, созданный Google, позиционируется в качестве замены JavaScript
-Dart2js — компилятор Dart в JavaScript. Разрабатывается той же командой что и Dart
-CoffeeScript — иной взгляд на JavaScript. Многое взято из Ruby, Python, Haskell и Erlang
-TypeScript — язык от Microsoft, позиционируемый как средство разработки веб-приложений
-
-Ceylon — язык, разрабатываемый в RedHat. Компилируется в Java байт-код и JavaScript
-Google Web Toolkit — Java-фреймворк для создания веб-приложений. Включает в себя компилятор из Java в JavaScript
-Closure-Compiler — оптимизатор JavaScript - кода
-Pyjs, qb.js, ghcjs, ClojureScript, ...
-
-
-Большой обзор на altJs.org
-
-Ceylon во многом похожий на Котлин проект, но с ними не интересно сравниваться, потому что они не сильно заморачиваются на оптимальности генерируемого JS кода
-
-GWT
-Closure-Compiler
-
-Отдельно хочется отметить GWT и CC 
-
-Все это проекты я изучил и перенял опыт.
-
-
-
-
--------
-Также в последнее время JavaScript набирает популярность в качестве языка для разработки серверной части приложений.
-
-***
-
-
----
-JS виртуальные машины
-
- 
-Разработчик
-Где используется?
-v8
-Google
-Chrome, Node.js,
-Android, ...
-
-SpiderMonkey
-Mozilla 
-Firefox,
-Thunderbird, ...
-
-Chakra
-Microsoft
-IE ver. $\geq$ 9
-
-Rhino
-Mozilla
- 
-JavaScriptCore
-WebKit
-Safari, iOS ...
-
-
-
-
-В данном разделе приводятся результаты анализа существующих решений смежных
-задач, а также дается обоснование актуальности поставленной задачи.
-
 \section{Язык программирования JavaScript}
 
-В настоящее время JavaScript, разработанный в 1995 году, является наиболее
-популярным из языков для разработки клиентских скриптов для веб приложений, а стандарт
-ECMAScript 5.0 [6] поддерживается всеми современными браузерами. Также в последнее
-время JavaScript набирает популярность в качестве языка для разработки серверной части
-приложений.
-Однако, несмотря на свою распространенность, язык JavaScript имеет существенное
-количество недостатков, затрудняющих разработку больших приложений. К примеру,
-Douglas Crockford
-в своей книге “JavaScript: The Good Parts” [7] указывает более 20
-неудачных решений, сделанных при проектировании языка. Среди них:
-- Использование глобальных переменных в стандартных API.
-- Привязка областей видимости переменных к функциям (а не блокам).
-- Запутанная семантика операторов сложения и сравнения.
-- Наличие неиспользуемых ключевых слов.
-Кроме того, динамическая типизация языка затрудняет разработку инструментов для
-JavaScript таких, как интегрированные среды разработки (IDE) и статические анализаторы
-кода.
-Все эти обстоятельства, а также растущая сложность клиентских приложений,
-которые приходится реализовывать разработчикам, подталкивают программистов к поиску
-замены для JavaScript. Благодаря этому возникло множество[8] программных продуктов,
-осуществляющих трансляцию в JavaScript многих современных языков программирования.
+JavaScript -- это язык программирования для Веб. Подавляющее большинство веб-сайтов используют JavaScript, и все современные веб-браузеры -- для настольных компьютеров, игровые приставок, электронных планшетов и смартфонов включают интерпретатор JavaScript, что делает JavaScript самым широкоприменимым языком программирования из когда либо существовавших в истории. JavaScript входит в тройку технологий, которые должны знать  любой веб-разработчик: язык разметки HTML, позволяющий определить содержимое веб-страниц, язык стилей CSS, позволяющий определить внешний вид веб-страниц, и язык программирования JavaScript, позволяющий определять поведение веб-страниц.
 
+JavaScript является высокоуровневым, динамическим, нетипизрованым и интрепретируемым языком программирования, который хорошо подходит для программирования в объектно-ориентированном и функциональном стилях. Свой синтаксис JavaScript унаследовал из языка Java, свои первоклассные функции -- из языка Scheme, а механизм наследования на основе прототипов -- из языка Self. 
 
-\section{Существующие трансляторы в JavaScript}
+Название языка «JavaScript» может вводить в заблуждение. За исключением поверхностной синтаксической схожести, JavaScript полностью отличается от языка программирования Java. JavaScript давно перерос рамки языка сценариев, превратившись в надежный и эффективный универсальный язык программирования. Последняя версия языка (смотрите врезку) определяет множество новых особенностей, позволяющих использовать его для разработки крупномасштабного программного обеспечения.
+% Чтобы представлять хоть какой-то интерес, каждый язык программирования должен иметь свою платформу, или стандартную библиотеку или API функций для выполнения таких базовых операций, как ввод и  вывод. Ядро языка JavaScript определяет минимальный прикладной интерфейс для работы с текстом, массивами, датами и регулярными выражениями, но в нем отсутствуют операции ввода-вывода. Ввод и вывод (а также более сложные возможности, такие как сетевые взаимодействия, сохранение данных и работа с графикой) перекладываются на «окружающую среду», куда встраивается JavaScript. Обычно роль окружающей среды играет веб-броузер.
+\cite{JsDef6}
 
-Автором был проведен анализ уже существующих решений с целью выявления
-актуальности поставленной задачи и изучения возможности повторного использования
-компонентов готовых продуктов. Далее приводится краткая техническая характеристика
-наиболее популярных из них:
+JavaScript является объектно-ориентированным языком, но используемое в языке прототипирование обуславливает отличия в работе с объектами по сравнению с традиционными класс-ориентированными языками. Кроме того, JavaScript имеет ряд свойств, присущих функциональным языкам — функции как объекты первого класса, объекты как списки, карринг, анонимные функции, замыкания.
+\cite{wiki:JS:ru}
 
-\subsection{Google Web Toolkit Java-to-JavaScript Compiler}
+\section{JavaScript виртуальные машины}
+ 
+\subsection{SpiderMonkey}
 
-Google Web Toolkit Java-to-JavaScript Compiler является частью каркаса Google Web
-Toolkit (GWT)[9], который был анонсирован компанией Google в 2006 году, текущая версия
-2.4.0. выпущена в сентябре 2011 года. Задачей данного модуля является трансляция
-программ на языке Java в кросс-браузерные скрипты JavaScript.
-К преимуществам разработки под каркас Google Web Toolkit по сравнению с
-JavaScript можно отнести:
-- Простоту в освоении для Java – программистов.
-- Отличную поддержку в современных IDE языка Java и каркаса GWT.
-- Возможность использовать значительную часть стандартных библиотек Java.
-- Богатую библиотеку элементов интерфейса.
-- Оптимизирующий генератор кода.
-- Возможность отладки прямо в браузере.
-К недостаткам можно отнести:
-- Невысокую скорость генерации JavaScript.
-- Сложный механизм взаимодействия с библиотеками, написанными на
-JavaScript.
--
-Невозможность безболезненно отказаться от использования GWT (перейти к
-использованию другой технологии без переписывания значительной части
-кода).
+SpiderMonkey -- первый в истории движок JavaScript, был написан Бренданом Айком во время его работы в Netscape Communications, а позднее сделан открытым. В настоящее время SpiderMonkey поддерживается Mozilla Foundation. Он написан на языке Си и включает в себя компилятор, интерпретатор, декомпилятор, сборщик мусора и стандартные классы. SpiderMonkey встраивается в другие приложения, которые предоставляют рабочее окружение для JavaScript.
 
-\subsection{Язык программирования Dart}
+Наиболее популярными программами которые используют данный <<движок>> являются Mozilla Firefox и Mozilla Application Suite/SeaMonkey, а также Adobe Acrobat и Adobe Reader.
+\cite{wiki:SpiderMonkey:ru}
 
-Язык программирования Dart[10], который был аносирован компанией Google в
-сентябре 2011 года, является попыткой введения нового стандарта в качестве языка
-7
-разработки клиентских скриптов для браузеров (вместо JavaScript). Dart поддерживает
-объектно-ориентированную и функциональные парадигмы и использует смесь статической и
-динамической типизации. Он может быть исполнен на виртуальной машине DartVM
-браузера Dartium, а модуль dartc осуществляет трансляцию Dart в JavaScript для исполнения
-в других браузерах.
-К преимуществам разработки на языке Dart можно отнести:
--
-Современный выразительный язык, спроектированный специально для
-разработки клиентских скриптов.
--
-Обширную стандартную библиотеку.
-Стоит отметить, что сам язык и инструменты для работы с ним на данный момент
-находятся в разработке.
+\subsection{Rhino}
 
-\subsection{Язык программирования CoffeeScript}
+Еще одина JavaScript виртуальная машина от Mozilla Foundation. Проект является открытым и полностью написан на Java. Rhino преобразует JavaScript код в Java классы. Движок работает и в компилируемом и интерпретируемом режимах. Он предназначен для использования в server-side приложениях, поэтому в нём нет встроенной поддержки для объектов браузера, которые обычно ассоциируются с JavaScript.
+\cite{wiki:Rhino:ru}
 
-CoffeeScript[11] – язык, призванный облегчить жизнь разработчикам на JavaScript.
-Транслятор CoffeeScript осуществляет перевод CoffeeScript в JavaScript для исполнения в
-браузере. За небольшое время своего существования CoffeeScript (версия 0.1 выпущена в
-конце 2009 года, в мае 2012 года выпущена версия 1.3) приобрел популярность, благодаря
-компактному и
-выразительному синтаксису,
-а
-также
-легкости
-в
-изучении
-для
-программистов, знакомых с JavaScript.
-К преимуществам разработки на языке CoffeeScript по сравнению с JavaScript можно
-отнести:
-- Выразительный синтаксис.
-- Поддержку классов.
+\subsection{V8}
+JavaScript виртуальная машина с открытым исходным кодом разрабатывающаяся в компании Google с сентября 2008 года. Отличительной особенностью данного проекта является то что код компилируется непосредственно в машинный код без использования промежуточного представления ввиде байт-кода. Виртуальная машина поддерживает архитектуры IA-32, x86-64, ARM, и MIPS. Обладает эффективной системой управления памятью, приводящая к быстрому объектному выделению и маленьким паузам сборки <<мусора>>. В данном <<движке>> активно используется так называемые <<скрытые классы>> и встроенные кэши, ускоряющие доступ к свойствам и вызовы функций.
 
-\subsection{Язык программирования Haxe}
+V8 используется в таких проектах как Chrome, Node.js, Android, и т. д.
+\cite{wiki:V8:en, wiki:V8:ru}
 
-Язык программирования Haxe[12] появился в 2005 году в качестве замены языка
-ActionScript. Haxe поддерживает объектно-ориентированную и функциональные парадигмы
-и имеет статическую типизацию с поддержкой динамических типов. Основной идеей языка
-Haxe является использование одного языка для разработки под множество платформ. На
-8
-июнь 2012 года Haxe может быть транслирован в код для следующих платформ: JavaScript,
-C++, Flash, PHP 5, NekoVM.
-К преимуществам разработки на языке Haxe можно отнести:
--
-Возможность разработки на одном языке программирования под множество
-платформ.
--
-Кросс-платформенную стандартную библиотеку.
+\subsection{Chakra}
+JavaScript виртуальная машина разрабатываемая в Microsoft. Отличительной особенностью данной виртуальной машины от большинства является наличие нескольких независимых модулей, которые могут работать параллельно друг другу и параллельно модулю отрисовки браузера. Это такие модули как: компилятор JavaScript кода в байт-код, JIT-компилятор, сборщик мусора. Так же движок при необходимости использует возможности графической платы.
+Chakra используется в Internet Explorer версии 9 и старше.
+\cite{wiki:Chakra:en}
 
-\section{Актуальность задачи}
+\subsection{JavaScriptCore}
 
-Ни одно из рассмотренных автором решений не удовлетворяет следующим
-критериям:
--
-Статически типизированный язык программирования с компактным и
-выразительным синтаксисом.
-- Существующий компилятор для платформы JVM.
-- Хорошая поддержка в интегрированной среде разработки.
-Поэтому является обоснованным решение реализовывать новый программный
-продукт. В качестве языка программирования, удовлетворяющим заданным критериям был
-выбран язык Kotlin.
+Встраиваемая JavaScript виртуальная машина с открытыми исходными кодами, является частью проекта WebKit. JavaScriptCore разрабатывается участниками проекта WebKit -- Apple, Google, BlackBerry, Adobe и другие. Кроме стандартного набора интерпретатор, сборщик мусора он так же включает в себя два JIT компилятора -- базовый(быстрый) и оптимизирующий.
+Используется в Safari и iOS.
+\cite{JavaScriptCore}
+
 
 \section{Язык программирования Kotlin}
 
-Kotlin[5] – один из нескольких новых развивающихся языков программирования для
-платформы
-JVM.
-Он
-имеет
-статическую
-типизацию
-и
-поддерживает
-объектно-
-ориентированную и функциональную парадигмы. Kotlin был анонсирован компанией
-JetBrains в июле 2011года, а в июне 2012 года была выпущена версия M2. Отличительной
-особенностью Kotlin является его полная совместимость с языком Java.
-Проведем
-сравнение
-нашего
-решения
-с
-уже
-существующими
-продуктами,
-упомянутыми в 2.2.
-Согласно[13], к преимуществам разработки на языке Kotlin по сравнению с Java и
-соответственно каркасом GWT можно отнести:
--
-Более лаконичный и выразительный синтаксис.
+Kotlin — статически типизированный объектно-ориентированный язык, разрабатываемый в компании JetBrains.
+Есть компиляторы в Java байт-код и в JavaScript.
+Kotlin имеет локоничный и выразительный синтаксис, в то же время остается простым для изучения. Как и любой стат
 
--
-Возможность обнаружить большее количество проблем на стадии компиляции
-(более безопасная система типов).
-- Более полная поддержка множественного наследования.
-- Поддержка функций высших порядков и замыканий.
-- Локальный вывод типов.
-По сравнению с языками Dart и CoffeeScript основным преимуществом Kotlin
-является статическая типизация, которая в частности означает возможность более полной
-поддержки в интегрированных средах разработки.
-Из перечисленных выше языков наиболее близким к Kotlin языком является Haxe,
-однако Haxe за более чем 5 лет своего существования так и
-не получил большого
-распространения за исключением разработки для платформы Flash. (Автор предполагает, что
-одними из причин непопулярности Haxe являются отсутствие поддержки хотя бы одной из
-наиболее популярных платформ, CLR (Common Language Runtime[14]) или JVM, и
-отсутствие качественной поддержки в интегрированных средах разработки).
+Наряду со всем этим хочется чтобы компилятор оставался достаточно быстрым. Это одна из причин почему нам не подходят готовые решения вроде GWT, Doppio, и другие.
+
+\cite{KotlinOSP}
+
+\section{Компиляторы в JavaScript}
+%todo нужно переименовать
+
+Эксперты в один голос заявляют, что JavaScript сегодня стал ассемблером для веба.\cite{JsIsAsm1, JsIsAsm2}
+Основной причиной таких высказываний является то, что за последние годы появилось много проектов целью которых является либо компиляция какого-либо зарекомендовавшего себя в индустрии языка в JavaScript, либо разработка нового языка который заменит JavaScript. Причем, наличие компилятора в JavaScript является обязательным атрибутом и проектов второй группы.
+Все это еще раз доказывает актуальность данного направления разработок. И, очевидно, наличие высокого интереса приводит к повышению уровня конкуренции, что, в свою очередь, повышает требование к качеству продукта.
+
+На сайте \url{altjs.org} представлен большой обзор проектов занимающихся компиляцией в JavaScript. Рассмотрим некотрые наиболее популярные сегодня проекты.
+\cite{langpop}
+
+\subsection{Компилятор GWT Java-to-JavaScript}
+
+Google Web Toolkit (GWT) -- это  разработанный в компании Google открытый Java-фреймворк, который позволяет разработчикам создавать веб-приложения используя язык программирования Java. GWT делает акцент на повторное использование и кросс-браузерную совместимость.
+Используя GWT, разработчики могут быстро писать и отлаживать веб-приложения на языке Java, используя инструментарий отладки Java. Компилятор GWT переведёт код Java приложения в соответствующий браузеру JavaScript и HTML.
+\cite{wiki:GWT:ru}
+GWT используется во многих продуктах компании Google, например, в  Google Wave и AdWords.
+\cite{GWT:overview}
+
+Компилятор GWT Java-to-JavaScript это один из компонентов GWT, который выполняет компиляцию Java кода в JavaScript.
+
+% К преимуществам разработки на Google Web Toolkit по сравнению с
+% JavaScript можно отнести:
+% - Простоту в освоении для Java – программистов.
+% - Отличную поддержку в современных IDE языка Java и каркаса GWT.
+% - Возможность использовать значительную часть стандартных библиотек Java.
+% - Богатую библиотеку элементов интерфейса.
+% - Оптимизирующий генератор кода.
+% - Возможность отладки прямо в браузере.
+% К недостаткам можно отнести:
+% - Невысокую скорость генерации JavaScript.
+% - Сложный механизм взаимодействия с библиотеками, написанными на
+% JavaScript.
+% - Невозможность безболезненно отказаться от использования GWT (перейти к
+% использованию другой технологии без переписывания значительной части
+% кода).
+
+\subsection{Язык программирования Dart}
+
+Dart -- объектно-ориентированный язык программирования разрабатываемая в компании Google. Исходные коды данного проекта находятся в открытом доступе. Dart позиционируется в качестве замены JavaScript в части разработки веб-приложений. Разработчики из Google считают что имеющиеся в JavaScript «фундаментальных» изъяны невозможно исправить путём эволюционного развития. В отличие от языка JavaScript реализация объектно-ориентированной парадигмы в языке Dart базируется на классах. Так же, в коде, написанном на данном языке, может присутствовать опциональная типизация.
+\cite{wiki:Dart:en}
+Задачи, поставленные перед разработчиками языка:\cite{Dart}
+\begin{itemize}
+\item Создать структурированный и в то же время гибкий язык для веб-программирования.
+\item Сделать язык похожим на существующие для упрощения обучения.
+\item Высокая производительность получаемых программ как в браузерах, так и в иных окружениях, начиная от смартфонов и заканчивая серверами.
+\end{itemize}
+
+Код написанный на данном языке может быть запущен с использованием виртуальной машины DartVM или же, можно воспользоваться входящим в Dart SDK компилятором dart2js, который преобразует данный код в JavaScript.\cite{Dart}
+
+
+\subsection{Язык программирования CoffeeScript}
+%todo отредактировать
+
+CoffeeScript -- язык программирования, транслируемый в JavaScript. Разработчики языка постарались сохранить все сильные стороны языка JavaScript. Так же в язык было добавлено множество синтаксического сахара в духе Ruby, Python, Haskell и Erlang для того, чтобы улучшить читаемость кода и уменьшить его размер. В среднем для выполнения одинаковых действий на CoffeeScript требуется в 2 раза меньше строк, чем JavaScript.
+
+Компилятор CoffeeScript чистый и лаконичный JavaScript код, который полностью проходит проверку JavaScript Lint.
+\cite{CoffeeScript}
+% За небольшое время своего существования CoffeeScript (версия 0.1 выпущена в
+% конце 2009 года, в мае 2012 года выпущена версия 1.3) приобрел популярность, благодаря компактному и выразительному синтаксису, а также легкости в изучении для программистов, знакомых с JavaScript.
+% К преимуществам разработки на языке CoffeeScript по сравнению с JavaScript можно
+% отнести:
+% - Выразительный синтаксис.
+% - Поддержку классов.
+
+\subsection{Язык программирования TypeScript}
+%todo отредактировать
+
+TypeScript -- статически типизированный язык программирования разрабатываемый в Microsoft. Позиционируется как средство разработки веб-приложений, расширяющее возможности JavaScript. Объектная модель в язык реализована на основе классов.
+
+Разработчиком языка TypeScript является Андерс Хейлсберг создавший ранее Turbo Pascal, Delphi и C\#.
+TypeScript является обратно совместимым с JavaScript и компилируется в последний. Фактически, после компиляции программу на TypeScript можно выполнять в любом современном браузере или использовать совместно с серверной платформой Node.js.
+
+TypeScript отличается от JavaScript возможностью явного определения типов (статическая типизация), поддержкой использования полноценных классов (как в традиционных объектно-ориентированных языках), а также поддержкой подключения модулей. По идее, подобные нововведения должны повысить скорость разработки, читабельность, рефакторинг и повторное использования кода, осуществлять поиск ошибок на этапе разработки и компиляции, а также скорость выполнения программ.
+Предполагается, что в силу полной обратной совместимости адаптация существующих приложений на новый язык программирования может происходить поэтапно, путём постепенного определения типов. \cite{wiki:TypeScript, TypeScript}
